Se agrego el grafico de positividad

--- a/Informe UCIRAG SAN JUAN - LA PAMPA - CHACO.html
+++ b/Informe UCIRAG SAN JUAN - LA PAMPA - CHACO.html
@@ -125,6 +125,15 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="Informe-UCIRAG-SAN-JUAN---LA-PAMPA---CHACO_files/figure-html/GRÁFICO%20positividad-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
 </section>
 </section>
 
